--- a/index.html
+++ b/index.html
@@ -8,4 +8,8 @@
 <body>
     Hi there
 </body>
+    <button 
+            onclick="alert('This is a button')">
+        Click Here
+    </button>
 </html>
